tests/ui/self/arbitrary_self_types_sizedness_trait.stderr
error[E0307]: invalid `self` parameter type: SmartPtr<'_, Self>
  --> $DIR/arbitrary_self_types_sizedness_trait.rs:12:16
   |
LL |     fn m(self: SmartPtr<Self>) {}
   |                ^^^^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0307`.
